spade-tests/src/snapshots/spade_tests__parser__wrong_argument_list_points_to_correct_token.snap
---
source: spade-tests/src/parser.rs
---
entity foo(clk: clk, a: bool) -> bool {
    reg(clk) a = a;
    a
}

entity main(clk: clk) -> bool {
    inst foo{clk, true}
}


error: Expected arguments for instantiation of foo
  ┌─ testinput:7:13
  │
7 │     inst foo{clk, true}
  │     --------^ Expected argument list here
  │     │        
  │     For this entity instantiation
  │
  = help: Argument lists start with either `$(` for named arguments
          or `(` for unnamed arguments


